# android_ffmpeg_demo

./: README.md
android_ffmpeg_demo/app/: CMakeLists.txt  build.gradle
android_ffmpeg_demo/app/src/androidTest/java/com/example/tongjiangsong/android_ffmpeg_demo/: ExampleInstrumentedTest.java
android_ffmpeg_demo/app/src/main/: AndroidManifest.xml
android_ffmpeg_demo/app/src/main/cpp/: native-lib.cpp
android_ffmpeg_demo/app/src/main/java/com/example/tongjiangsong/android_ffmpeg_demo/: MainActivity.java
android_ffmpeg_demo/app/src/main/jni1/include/libavutil/: ffversion.h
android_ffmpeg_demo/app/src/main/res/values/: strings.xml
android_ffmpeg_demo/app/src/test/java/com/example/tongjiangsong/android_ffmpeg_demo/: ExampleUnitTest.java
android_ffmpeg_demo/gradle/wrapper/: gradle-wrapper.properties
